--- a/Okello/index.html
+++ b/Okello/index.html
@@ -5,36 +5,45 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Kogalo Comrades Association</title>
   <link rel="icon" href="assets/favicon.ico" type="image/x-icon" />
+  <!-- Bootstrap CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+  <!-- Custom CSS (after Bootstrap) -->
   <link rel="stylesheet" href="style.css" />
-</head>       
+</head>
           <body>
             <header>
-              <nav class="navbar">
-                <div class="nav-left">
-                  <button id="hamburger" class="hamburger" aria-label="Open menu">
-                    <span></span>
-                    <span></span>
-                    <span></span>
-                  </button>
-                  <div class="logo">Kogalo Comrades</div>
-                </div>
+              <nav class="navbar navbar-expand-lg custom-navbar">
+                <div class="container-fluid">
+                  <div class="nav-left">
+                    <button id="hamburger" class="navbar-toggler hamburger" type="button" data-bs-toggle="collapse" data-bs-target="#navbarContent" aria-controls="navbarContent" aria-expanded="false" aria-label="Toggle navigation">
+                      <span></span>
+                      <span></span>
+                      <span></span>
+                    </button>
+                    <a class="navbar-brand logo" href="#">Kogalo Comrades</a>
+                  </div>
 
-                <ul class="nav-links">
-                  <li><a href="#about">About</a></li>
-                  <li class="has-dropdown">
-                    <a href="#services">Services <span class="caret">▾</span></a>
-                    <ul class="dropdown">
-                      <li><a href="#services">Networking</a></li>
-                      <li><a href="#services">Workshops</a></li>
-                      <li><a href="#services">Projects</a></li>
+                  <div class="collapse navbar-collapse" id="navbarContent">
+                    <ul class="navbar-nav ms-auto nav-links">
+                      <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
+                      <li class="nav-item dropdown has-dropdown">
+                        <a class="nav-link dropdown-toggle" href="#services" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                          Services <span class="caret">▾</span>
+                        </a>
+                        <ul class="dropdown-menu">
+                          <li><a class="dropdown-item" href="#services">Networking</a></li>
+                          <li><a class="dropdown-item" href="#services">Workshops</a></li>
+                          <li><a class="dropdown-item" href="#services">Projects</a></li>
+                        </ul>
+                      </li>
+                      <li class="nav-item"><a class="nav-link" href="#events">Events</a></li>
+                      <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
+                      <li class="nav-item"><a class="nav-link login-nav" href="login.html">Login</a></li>
                     </ul>
-                  </li>
-                  <li><a href="#events">Events</a></li>
-                  <li><a href="#contact">Contact</a></li>
-                  <li><a href="login.html" class="login-nav">Login</a></li>
-                </ul>
+                  </div>
 
-                <button id="openSidebar" class="sidebar-open" aria-label="Open sidebar">☰</button>
+                  <button id="openSidebar" class="sidebar-open d-lg-none" aria-label="Open sidebar">☰</button>
+                </div>
               </nav>
 
               <section class="hero">
@@ -64,25 +73,93 @@
                 <div class="slides">
                   <div class="slide"> 
                     <div class="slide-content">
-                      <h2>Grow your network</h2>
-                      <p>Monthly meetups and networking sessions.</p>
+                      <div class="slide-image" style="background-image: url('assets/networking.jpg');">
+                        <div class="slide-overlay"></div>
+                      </div>
+                      <div class="slide-text">
+                        <h2>Grow Your Network</h2>
+                        <p>Join our monthly networking events and connect with like-minded professionals. Build lasting relationships that drive success.</p>
+                        <ul class="slide-features">
+                          <li>✓ Business Matchmaking</li>
+                          <li>✓ Industry Expert Talks</li>
+                          <li>✓ Networking Dinners</li>
+                        </ul>
+                        <a href="#events" class="slide-cta">Next Event: Dec 15</a>
+                      </div>
                     </div>
                   </div>
                   <div class="slide">
                     <div class="slide-content">
-                      <h2>Skill workshops</h2>
-                      <p>Hands-on training for entrepreneurs.</p>
+                      <div class="slide-image" style="background-image: url('assets/workshop.jpg');">
+                        <div class="slide-overlay"></div>
+                      </div>
+                      <div class="slide-text">
+                        <h2>Master New Skills</h2>
+                        <p>Transform your business with our hands-on workshops and training sessions. Learn from industry experts and successful entrepreneurs.</p>
+                        <ul class="slide-features">
+                          <li>✓ Digital Marketing</li>
+                          <li>✓ Financial Management</li>
+                          <li>✓ Leadership Skills</li>
+                        </ul>
+                        <a href="#services" class="slide-cta">View Workshops</a>
+                      </div>
                     </div>
                   </div>
                   <div class="slide">
                     <div class="slide-content">
-                      <h2>Community impact</h2>
-                      <p>Projects that give back to the community.</p>
+                      <div class="slide-image" style="background-image: url('assets/community.jpg');">
+                        <div class="slide-overlay"></div>
+                      </div>
+                      <div class="slide-text">
+                        <h2>Community Impact</h2>
+                        <p>Make a difference in your community through our social responsibility initiatives. Join hands in creating positive change.</p>
+                        <ul class="slide-features">
+                          <li>✓ Youth Mentorship</li>
+                          <li>✓ Environmental Projects</li>
+                          <li>✓ Community Support</li>
+                        </ul>
+                        <a href="#about" class="slide-cta">Join Our Mission</a>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="slide">
+                    <div class="slide-content">
+                      <div class="slide-image" style="background-image: url('assets/innovation.jpg');">
+                        <div class="slide-overlay"></div>
+                      </div>
+                      <div class="slide-text">
+                        <h2>Innovation Hub</h2>
+                        <p>Access state-of-the-art resources and collaborate on cutting-edge projects. Turn your ideas into reality.</p>
+                        <ul class="slide-features">
+                          <li>✓ Tech Incubation</li>
+                          <li>✓ Research Support</li>
+                          <li>✓ Startup Funding</li>
+                        </ul>
+                        <a href="#services" class="slide-cta">Explore Opportunities</a>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="slide">
+                    <div class="slide-content">
+                      <div class="slide-image" style="background-image: url('assets/global.jpg');">
+                        <div class="slide-overlay"></div>
+                      </div>
+                      <div class="slide-text">
+                        <h2>Global Connections</h2>
+                        <p>Expand your business horizons with our international network. Access global markets and partnerships.</p>
+                        <ul class="slide-features">
+                          <li>✓ Trade Missions</li>
+                          <li>✓ Global Partnerships</li>
+                          <li>✓ Market Access</li>
+                        </ul>
+                        <a href="#contact" class="slide-cta">Get Started</a>
+                      </div>
                     </div>
                   </div>
                 </div>
                 <button class="slider-btn prev" aria-label="Previous slide">‹</button>
                 <button class="slider-btn next" aria-label="Next slide">›</button>
+                <div class="slider-dots"></div>
               </section>
 
               <section id="about" class="section">
@@ -148,12 +225,16 @@
             <footer>
               <p>&copy; 2025 Kogalo Comrades Association</p>
               <div class="socials">
-                <a href="#">Facebook</a>
+                <a href="#" >Facebook</a>
+                
                 <a href="#">Twitter</a>
                 <a href="#">Instagram</a>
               </div>
             </footer>
 
+            <!-- Bootstrap Bundle with Popper -->
+            <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+            <!-- Custom JavaScript -->
             <script src="script.js"></script>
           </body>
         </html>
