--- a/Okello/login.html
+++ b/Okello/login.html
@@ -1,87 +1,202 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login - Kogalo Comrades Association</title>
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-    <!-- Custom CSS (after Bootstrap) -->
-    <link rel="stylesheet" href="style.css">
-    <style>
-        .profile-preview {
-            width: 100px;
-            height: 100px;
-            border-radius: 50%;
-            object-fit: cover;
-            display: none;
-            margin: 10px auto;
-        }
-        .register-section {
-            display: none;
-        }
-        .register-section.active {
-            display: block;
-        }
-    </style>
-</head>
-<body class="login-page">
-    <div class="login-container container py-5">
-        <div class="login-box card shadow-lg">
-            <div class="card-body">
-                <!-- Login Section -->
-                <div id="loginSection">
-                    <h2 class="card-title text-center mb-4">Welcome Back!</h2>
-                    <form class="login-form" id="loginForm">
-                        <div class="form-group mb-3">
-                            <input type="email" id="loginEmail" class="form-control" placeholder="Email Address" required>
-                        </div>
-                        <div class="form-group mb-3">
-                            <input type="password" id="loginPassword" class="form-control" placeholder="Password" required>
-                        </div>
-                        <button type="submit" class="login-button btn btn-primary w-100">Login</button>
-                    </form>
-                    <div class="login-footer text-center mt-3">
-                        <p class="mb-2">Don't have an account? <a href="#" class="register-link">Register</a></p>
-                        <a href="#" class="forgot-password">Forgot Password?</a>
-                    </div>
-                </div>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>DEKUT Comrades Association - Login</title>
 
-                <!-- Register Section -->
-                <div id="registerSection" class="register-section">
-                    <h2 class="card-title text-center mb-4">Create Account</h2>
-                    <form class="register-form" id="registerForm">
-                        <div class="text-center mb-3">
-                            <img id="profilePreview" class="profile-preview" src="#" alt="Profile Preview">
-                        </div>
-                        <div class="form-group mb-3">
-                            <label for="profilePhoto" class="form-label">Profile Photo</label>
-                            <input type="file" id="profilePhoto" class="form-control" accept="image/*">
-                        </div>
-                        <div class="form-group mb-3">
-                            <input type="text" id="username" class="form-control" placeholder="Username" required>
-                        </div>
-                        <div class="form-group mb-3">
-                            <input type="email" id="registerEmail" class="form-control" placeholder="Email Address" required>
-                        </div>
-                        <div class="form-group mb-3">
-                            <input type="password" id="registerPassword" class="form-control" placeholder="Password" required>
-                        </div>
-                        <div class="form-group mb-3">
-                            <input type="text" id="assets" class="form-control" placeholder="Assets/Interests (comma-separated)">
-                        </div>
-                        <button type="submit" class="register-button btn btn-primary w-100">Register</button>
-                    </form>
-                    <div class="text-center mt-3">
-                        <p>Already have an account? <a href="#" class="login-link">Login</a></p>
-                    </div>
-                </div>
-            </div>
-        </div>
+  <!-- Bootstrap CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
+  <!-- Bootstrap Icons -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet" />
+  <link href="assets/css/style1.css" rel="stylesheet" />
+  <style>
+    /* Body with professional red-black gradient */
+    body {
+      background: linear-gradient(135deg, #8B0000 0%, #000000 100%);
+      color: #f1f1f1;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      padding-top: 70px; /* offset navbar */
+      min-height: 100vh;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+
+    /* Navbar styling - consistent with About page */
+    nav.navbar {
+      background-color: rgba(0, 0, 0, 0.85) !important;
+      box-shadow: 0 0 15px rgba(255, 68, 68, 0.5);
+      position: fixed;
+      width: 100%;
+      top: 0;
+      z-index: 1030;
+    }
+    nav.navbar .navbar-brand,
+    nav.navbar .nav-link {
+      color: #ff4444 !important;
+    }
+    nav.navbar .nav-link:hover,
+    nav.navbar .nav-link.active,
+    nav.navbar .nav-link:focus {
+      color: #f1f1f1 !important;
+      outline: none;
+      text-shadow: 0 0 10px #ff4444;
+    }
+    nav.navbar .dropdown-menu {
+      background-color: rgba(0, 0, 0, 0.9);
+    }
+    nav.navbar .dropdown-menu .dropdown-item {
+      color: #f1f1f1;
+    }
+    nav.navbar .dropdown-menu .dropdown-item:hover,
+    nav.navbar .dropdown-menu .dropdown-item:focus {
+      background-color: #ff4444;
+      color: #000;
+      outline: none;
+    }
+
+    /* Login card styling */
+    .login-card {
+      background: rgba(0, 0, 0, 0.7);
+      border: 2px solid #ff4444;
+      border-radius: 1rem;
+      padding: 2.5rem 3rem;
+      box-shadow: 0 0 30px #ff4444;
+      width: 100%;
+      max-width: 420px;
+      color: #f1f1f1;
+    }
+
+    /* Form controls */
+    .form-control {
+      background-color: #1a1a1a;
+      border: 1px solid #ff4444;
+      color: #fff;
+    }
+    .form-control::placeholder {
+      color: #ff7777;
+      opacity: 1;
+    }
+    .form-control:focus {
+      border-color: #ff7777;
+      box-shadow: 0 0 8px #ff7777;
+      background-color: #330000;
+      color: #fff;
+    }
+    .form-label {
+      font-weight: 600;
+    }
+
+    /* Buttons */
+    .btn-primary {
+      background-color: #ff4444;
+      border-color: #ff4444;
+      transition: background-color 0.3s ease, box-shadow 0.3s ease;
+      font-weight: 600;
+    }
+    .btn-primary:hover,
+    .btn-primary:focus {
+      background-color: #b30000;
+      border-color: #b30000;
+      box-shadow: 0 0 15px #b30000;
+      outline: none;
+    }
+
+    /* Signup link styling */
+    .signup-text {
+      margin-top: 1rem;
+      font-size: 0.9rem;
+      text-align: center;
+      color: #ff6f6f;
+    }
+    .signup-text a {
+      color: #ff7777;
+      text-decoration: underline;
+    }
+    .signup-text a:hover,
+    .signup-text a:focus {
+      color: #fff;
+      outline: none;
+      text-decoration: none;
+    }
+
+    /* Focus outlines for accessibility */
+    a:focus,
+    button:focus,
+    input:focus {
+      outline: 3px solid #ff4444;
+      outline-offset: 2px;
+    }
+  </style>
+</head>
+<body>
+
+<!-- Navbar -->
+<nav class="navbar navbar-expand-lg navbar-dark" aria-label="Main navigation">
+  <div class="container">
+    <a class="navbar-brand fw-bold" href="index.html" tabindex="0" aria-label="DEKUT Comrades Association Home">DEKUT Comrades Association</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navContent" aria-controls="navContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navContent">
+      <ul class="navbar-nav ms-auto">
+        <li class="nav-item"><a class="nav-link" href="home.html" tabindex="0">Home</a></li>
+        <li class="nav-item"><a class="nav-link" href="about.html" tabindex="0">About</a></li>
+        <li class="nav-item"><a class="nav-link" href="membership.html" tabindex="0">Membership</a></li>
+        <li class="nav-item"><a class="nav-link" href="events.html" tabindex="0">Events</a></li>
+        <li class="nav-item"><a class="nav-link" href="blog.html" tabindex="0">Blog</a></li>
+        <li class="nav-item"><a class="nav-link" href="contact.html" tabindex="0">Contact</a></li>
+        <li class="nav-item"><a class="nav-link active" aria-current="page" href="login.html" tabindex="0"><i class="bi bi-box-arrow-in-right"></i> Login</a></li>
+      </ul>
     </div>
-    <!-- Bootstrap Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-    <!-- Custom JavaScript -->
-    <script src="script.js"></script>
+  </div>
+</nav>
+
+<!-- Login Form -->
+<main class="d-flex justify-content-center align-items-center flex-grow-1" style="min-height: calc(100vh - 70px);" aria-label="Login form container">
+  <section class="login-card shadow" role="form" aria-labelledby="loginTitle" tabindex="0">
+    <h2 id="loginTitle" class="mb-4 text-center">Member Login</h2>
+    <form id="loginForm" novalidate autocomplete="off">
+      <div class="mb-3">
+        <label for="loginEmail" class="form-label">Email address</label>
+        <input type="email" class="form-control" id="loginEmail" placeholder="name@example.com" required aria-required="true" autocomplete="username" />
+        <div class="invalid-feedback">Please enter a valid email address.</div>
+      </div>
+      <div class="mb-3">
+        <label for="loginPassword" class="form-label">Password</label>
+        <input type="password" class="form-control" id="loginPassword" placeholder="********" required aria-required="true" minlength="6" autocomplete="current-password" />
+        <div class="invalid-feedback">Please enter your password (minimum 6 characters).</div>
+      </div>
+      <button type="submit" class="btn btn-primary w-100" aria-label="Login to your account">Login</button>
+    </form>
+    <p class="signup-text" tabindex="0">
+      Don't have an account? <a href="membership.html" aria-label="Go to membership signup page">Sign up now</a>
+    </p>
+  </section>
+</main>
+
+<!-- Bootstrap JS Bundle -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+
+<script>
+  (() => {
+    'use strict';
+    const form = document.getElementById('loginForm');
+    form.addEventListener('submit', e => {
+      if (!form.checkValidity()) {
+        e.preventDefault();
+        e.stopPropagation();
+        form.classList.add('was-validated');
+      } else {
+        e.preventDefault();
+        alert('Login successful! (Demo only)');
+        form.reset();
+        form.classList.remove('was-validated');
+      }
+    });
+  })();
+</script>
+
 </body>
 </html>
