--- a/Okello/about.html
+++ b/Okello/about.html
@@ -156,7 +156,7 @@ footer a {
     </button>
     <div class="collapse navbar-collapse" id="navbarContent">
       <ul class="navbar-nav ms-auto">
-        <li class="nav-item"><a class="nav-link" href="home.html" tabindex="0">Home</a></li>
+        <li class="nav-item"><a class="nav-link" href="index.html" tabindex="0">Home</a></li>
         <li class="nav-item"><a class="nav-link active" aria-current="page" href="about.html" tabindex="0">About</a></li>
         <li class="nav-item"><a class="nav-link" href="membership.html" tabindex="0">Membership</a></li>
         <li class="nav-item"><a class="nav-link" href="events.html" tabindex="0">Events</a></li>
@@ -206,7 +206,7 @@ footer a {
 
       <article class="col-sm-6 col-md-4 col-lg-3">
         <div class="leader-card" tabindex="0" role="group" aria-label="Chairperson profile Jane W. Kamau">
-          <img class="leader-photo" src="https://via.placeholder.com/150?text=Jane+Kamau" alt="Jane W. Kamau, Chairperson" />
+          <img class="leader-photo" src="Okello/assets/Images/IMG-20251115-WA0012.jpg" alt="Jane W. Kamau, Chairperson" />
           <h3 class="leader-name">Jane W. Kamau</h3>
           <p class="leader-position">Chairperson</p>
           <p class="leader-bio">
@@ -217,7 +217,7 @@ footer a {
 
       <article class="col-sm-6 col-md-4 col-lg-3">
         <div class="leader-card" tabindex="0" role="group" aria-label="Vice Chairperson profile David M. Njuguna">
-          <img class="leader-photo" src="https://via.placeholder.com/150?text=David+Njuguna" alt="David M. Njuguna, Vice Chairperson" />
+          <img class="leader-photo" src="Okello/assets/Images/IMG-20251115-WA0009.jpg" alt="David M. Njuguna, Vice Chairperson" />
           <h3 class="leader-name">David M. Njuguna</h3>
           <p class="leader-position">Vice Chairperson</p>
           <p class="leader-bio">
@@ -228,7 +228,7 @@ footer a {
 
       <article class="col-sm-6 col-md-4 col-lg-3">
         <div class="leader-card" tabindex="0" role="group" aria-label="Secretary profile Esther K. Wanjiku">
-          <img class="leader-photo" src="https://via.placeholder.com/150?text=Esther+Wanjiku" alt="Esther K. Wanjiku, Secretary" />
+          <img class="leader-photo" src="Okello/assets/Images/IMG-20251115-WA0013.jpg" alt="Esther K. Wanjiku, Secretary" />
           <h3 class="leader-name">Esther K. Wanjiku</h3>
           <p class="leader-position">Secretary</p>
           <p class="leader-bio">
@@ -239,7 +239,7 @@ footer a {
 
       <article class="col-sm-6 col-md-4 col-lg-3">
         <div class="leader-card" tabindex="0" role="group" aria-label="Treasurer profile Peter O. Njoroge">
-          <img class="leader-photo" src="https://via.placeholder.com/150?text=Peter+Njoroge" alt="Peter O. Njoroge, Treasurer" />
+          <img class="leader-photo" src="Okello/assets/Images/IMG-20251115-WA0010.jpg" alt="Peter O. Njoroge, Treasurer" />
           <h3 class="leader-name">Peter O. Njoroge</h3>
           <p class="leader-position">Treasurer</p>
           <p class="leader-bio">
