--- a/Okello/blog.html
+++ b/Okello/blog.html
@@ -199,7 +199,7 @@
     </button>
     <div class="collapse navbar-collapse" id="navContent">
       <ul class="navbar-nav ms-auto">
-        <li class="nav-item"><a class="nav-link" href="home.html" tabindex="0">Home</a></li>
+        <li class="nav-item"><a class="nav-link" href="index.html" tabindex="0">Home</a></li>
         <li class="nav-item"><a class="nav-link" href="about.html" tabindex="0">About</a></li>
         <li class="nav-item"><a class="nav-link" href="membership.html" tabindex="0">Membership</a></li>
         <li class="nav-item"><a class="nav-link" href="events.html" tabindex="0">Events</a></li>
