--- a/Okello/events.html
+++ b/Okello/events.html
@@ -196,7 +196,7 @@
     </button>
     <div class="collapse navbar-collapse" id="navContent">
       <ul class="navbar-nav ms-auto">
-        <li class="nav-item"><a class="nav-link" href="home.html">Home</a></li>
+        <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
         <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
         <li class="nav-item"><a class="nav-link" href="membership.html">Membership</a></li>
         <li class="nav-item"><a class="nav-link active" aria-current="page" href="events.html">Events</a></li>
@@ -218,21 +218,21 @@
     <div class="row g-4">
       <div class="col-md-6">
         <div class="card event-card shadow-sm" tabindex="0" role="button" data-bs-toggle="modal" data-bs-target="#event1Modal" aria-describedby="event1desc">
-          <img src="https://via.placeholder.com/600x200?text=Leadership+Bootcamp" class="card-img-top event-image" alt="Leadership Bootcamp" />
+          <img src="Okello/assets/Images/IMG-20251115-WA0014.jpg" class="card-img-top event-image" alt="Leadership Bootcamp" />
           <div class="card-body">
             <h5 class="card-title">Leadership Bootcamp 2024</h5>
             <p class="card-text" id="event1desc">An immersive 3-day program honing leadership skills and teamwork.</p>
-            <p class="text-muted small mb-0">July 12-14, 2024</p>
+            <p class="text-muted small mb-0">July 12-14, 2025</p>
           </div>
         </div>
       </div>
       <div class="col-md-6">
         <div class="card event-card shadow-sm" tabindex="0" role="button" data-bs-toggle="modal" data-bs-target="#event2Modal" aria-describedby="event2desc">
-          <img src="https://via.placeholder.com/600x200?text=Annual+Gala" class="card-img-top event-image" alt="Annual Gala" />
+          <img src="Okello/assets/Images/IMG-20251115-WA0011.jpg" class="card-img-top event-image" alt="Annual Gala" />
           <div class="card-body">
             <h5 class="card-title">Annual Gala Night</h5>
             <p class="card-text" id="event2desc">A celebration of achievements with cultural performances and awards.</p>
-            <p class="text-muted small mb-0">August 21, 2024</p>
+            <p class="text-muted small mb-0">August 21, 2025</p>
           </div>
         </div>
       </div>
@@ -245,21 +245,21 @@
     <div class="row g-4">
       <div class="col-md-4">
         <div class="card shadow-sm">
-          <img src="https://via.placeholder.com/400x200?text=Community+Clean-Up" class="card-img-top event-image" alt="Community Clean Up" />
+          <img src="Okello/assets/Images/IMG-20251115-WA0006.jpg" class="card-img-top event-image" alt="Community Clean Up" />
           <div class="card-body">
             <h5 class="card-title">Community Clean-Up Drive</h5>
             <p class="card-text">Dedan Kimathi students partnered with the local community to clean and green public spaces.</p>
-            <p class="text-muted small mb-0">June 3, 2024</p>
+            <p class="text-muted small mb-0">June 3, 2025</p>
           </div>
         </div>
       </div>
       <div class="col-md-4">
         <div class="card shadow-sm">
-          <img src="https://via.placeholder.com/400x200?text=Tech+Workshop" class="card-img-top event-image" alt="Tech Workshop" />
+          <img src="Okello/assets/Images/IMG-20251115-WA0008.jpg" class="card-img-top event-image" alt="Tech Workshop" />
           <div class="card-body">
             <h5 class="card-title">Tech Skills Workshop</h5>
             <p class="card-text">Training on web development, cybersecurity, and AI fundamentals with industry leaders.</p>
-            <p class="text-muted small mb-0">April 8-9, 2024</p>
+            <p class="text-muted small mb-0">April 8-9, 2025</p>
           </div>
         </div>
       </div>
@@ -269,7 +269,7 @@
           <div class="card-body">
             <h5 class="card-title">Cultural Festival</h5>
             <p class="card-text">A colorful celebration showcasing Kenyan traditions and arts.</p>
-            <p class="text-muted small mb-0">May 22-24, 2024</p>
+            <p class="text-muted small mb-0">May 22-24, 2025</p>
           </div>
         </div>
       </div>
@@ -289,7 +289,7 @@
       <div class="modal-body">
         <img src="https://via.placeholder.com/900x400?text=Leadership+Bootcamp+Image" alt="Leadership Bootcamp" class="img-fluid rounded mb-3" />
         <p>The Leadership Bootcamp offers an immersive experience, focusing on practical skills such as communication, conflict resolution, and strategic thinking. Activities include workshops, team-building exercises, and guest speaker sessions.</p>
-        <p><strong>Date:</strong> July 12-14, 2024</p>
+        <p><strong>Date:</strong> July 12-14, 2025</p>
         <p><strong>Location:</strong> Main Campus Auditorium</p>
       </div>
       <div class="modal-footer">
@@ -309,7 +309,7 @@
       <div class="modal-body">
         <img src="https://via.placeholder.com/900x400?text=Annual+Gala" alt="Annual Gala" class="img-fluid rounded mb-3" />
         <p>The Gala Night is a prestigious event celebrating the achievements of our members with live cultural performances, awards, and networking opportunities. Dress code: Formal.</p>
-        <p><strong>Date:</strong> August 21, 2024</p>
+        <p><strong>Date:</strong> August 21, 2025</p>
         <p><strong>Location:</strong> University Banquet Hall</p>
       </div>
       <div class="modal-footer">
