--- a/Okello/membership.html
+++ b/Okello/membership.html
@@ -10,7 +10,7 @@
     /* Body with professional red-black gradient */
     body {
       background: linear-gradient(135deg, #8B0000 0%, #000000 100%);
-      color: #f1f1f1;
+      color: #320c0c;
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
       padding-top: 70px; /* offset navbar */
       min-height: 100vh;
@@ -72,7 +72,7 @@
     #categoryFilter {
       background-color: #1a1a1a;
       border: 1px solid #ff4444;
-      color: #f1f1f1;
+      color: #310c0c;
     }
     #categoryFilter:focus {
       border-color: #ff7777;
@@ -87,7 +87,7 @@
       border: 1px solid #ff4444;
       border-radius: 0.75rem;
       box-shadow: 0 0 15px rgba(255, 68, 68, 0.5);
-      color: #f1f1f1;
+      color: #280b0b;
       transition: box-shadow 0.3s ease, transform 0.2s ease;
     }
     .post-card:hover,
@@ -112,12 +112,12 @@
       font-size: 1.25rem;
     }
     .card-text {
-      color: #f1f1f1;
+      color: #e3e2e2;
       font-size: 0.95rem;
       margin-bottom: 0.5rem;
     }
     .text-muted {
-      color: #ff9999 !important;
+      color: #a1a1a1 !important;
       font-size: 0.85rem;
     }
     .btn-outline-primary {
@@ -196,7 +196,7 @@
     </button>
     <div class="collapse navbar-collapse" id="navContent">
       <ul class="navbar-nav ms-auto">
-        <li class="nav-item"><a class="nav-link" href="home.html">Home</a></li>
+        <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
         <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
         <li class="nav-item"><a class="nav-link active" aria-current="page" href="membership.html">Membership</a></li>
         <li class="nav-item"><a class="nav-link" href="events.html">Events</a></li>
