--- a/Okello/contact.html
+++ b/Okello/contact.html
@@ -204,7 +204,7 @@
     </button>
     <div class="collapse navbar-collapse" id="navContent">
       <ul class="navbar-nav ms-auto">
-        <li class="nav-item"><a class="nav-link" href="home.html">Home</a></li>
+        <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
         <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
         <li class="nav-item"><a class="nav-link" href="membership.html">Membership</a></li>
         <li class="nav-item"><a class="nav-link" href="events.html">Events</a></li>
