--- a/Okello/index.html
+++ b/Okello/index.html
@@ -196,7 +196,7 @@
     </button>
     <div class="collapse navbar-collapse" id="navContent">
       <ul class="navbar-nav ms-auto">
-        <li class="nav-item"><a class="nav-link active" href="home.html" aria-current="page">Home</a></li>
+        <li class="nav-item"><a class="nav-link active" href="index.html" aria-current="page">Home</a></li>
         <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
         <li class="nav-item"><a class="nav-link" href="membership.html">Membership</a></li>
         <li class="nav-item"><a class="nav-link" href="events.html">Events</a></li>
